fixing spacing on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,7 +65,7 @@ a {
 /**************** CONTACT ****************/
 .contacts{
   margin: auto;
-  width: 55%;
+  width: 60%;
 }
 
 .contact-icons{
